[package]
name = "tio"
version = "0.1.0"
authors = ["Matthew Maxwell <maxwellmattryan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.51"
futures = "0.3"
iota-client = { git = "https://github.com/iotaledger/iota.rs", branch = "dev" }
structopt = { version = "0.3", default-features = false }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
