[package]
name = "tio"
version = "1.0.0"
authors = ["Matthew Maxwell <maxwellmattryan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "2.0.1"
async-trait = "0.1.51"
chrono = "0.4.0"
futures = "0.3"
hex = "0.4"
iota-client = { git = "https://github.com/iotaledger/iota.rs", branch = "dev" }
rand = "0.8"
rsa = "0.5"
structopt = { version = "0.3", default-features = false }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
url = "2.2.2"
